alignment issue

--- a/src/Components/Active_Projects/Active_Projects.css
+++ b/src/Components/Active_Projects/Active_Projects.css
@@ -63,7 +63,7 @@
 }
 
 .summary {
-  text-align: justify;
+  /* text-align: justify; */
   color: #94a3b8;
   white-space: pre-line;
 }
